--- a/mini project signup page/index.html
+++ b/mini project signup page/index.html
@@ -14,22 +14,21 @@
     <div class="outer-box">
         <div class="inner-box">
             <header class="signup-header">
-                <h1>Login</h1>
-
+                <h1>Signup</h1>
             </header>
             <main class="signup-body">
-                <form action="#">
+                <form id="signupForm">
                     <p>
                         <label for="fullname">Full Name</label>
-                        <input type="text" id="fullname" placeholder="srajan gupta" required>
+                        <input type="text" id="fullname" name="fullname" placeholder="Enter your name" required>
                     </p>
                     <p>
                         <label for="email">Your Email</label>
-                        <input type="email" id="email" placeholder="srajan2303@gmail.com" required>
+                        <input type="email" id="email" name="email" placeholder="Enter your email id" required>
                     </p>
                     <p>
-                        <label for="password">Password</label>
-                        <input type="password" id="password" placeholder="at least 8 characters" required>
+                        <label for="phone">Phone no.</label>
+                        <input type="tel" id="phone" name="phone" placeholder="Enter phone no." required>
                     </p>
                     <p>
                         <input type="submit" id="submit" value="Create Account">
@@ -37,16 +36,42 @@
                 </form>
             </main>
             <footer class="signup-footer">
-                <p>Already have an Account? <a href="#">Login</a>
-                </p>
+                <p>Already have an Account? <a href="#">Login</a></p>
             </footer>
-            
         </div>
         <div class="div">
             <div class="circle c1"></div>
             <div class="circle c2"></div>
         </div>
     </div>
+
+    <script>
+        document.getElementById('signupForm').addEventListener('submit', async function(event) {
+            event.preventDefault();
+
+            const fullname = document.getElementById('fullname').value;
+            const email = document.getElementById('email').value;
+            const phone = document.getElementById('phone').value;
+
+            const response = await fetch('http://<backend-ip-address>:<backend-port>/users/signup', {
+                method: 'POST',
+                headers: {
+                    'Content-Type': 'application/json'
+                },
+                body: JSON.stringify({ fullname, email, phone })
+            });
+
+            if (response.ok) {
+                const result = await response.json();
+                alert('Account created successfully!');
+                // Redirect to login or another page
+                window.location.href = '/login';
+            } else {
+                const error = await response.text();
+                alert('Error: ' + error);
+            }
+        });
+    </script>
 
 </body>
 
